Add WLED Effects integration with services, configuration, and trigger management
- Implement services for starting, stopping, and configuring effects in services.yaml
- Create strings.json for user interface strings and error messages
- Add English translations in translations/en.json
- Develop trigger management system in trigger_manager.py for context-aware effects
- Implement WLED connection management in wled_manager.py for efficient device communication
- Document installation and quick start guide in INSTALLATION.md and QUICK_START.md

--- a/custom_components/wled_context_effects/manifest.json
+++ b/custom_components/wled_context_effects/manifest.json
@@ -1,6 +1,6 @@
 {
-  "domain": "wled_effects",
-  "name": "WLED Effects",
+  "domain": "wled_context_effects",
+  "name": "WLED Context Effects",
   "codeowners": ["@tamaygz"],
   "config_flow": true,
   "dependencies": ["wled"],
